# fastapi-production-template

./: .coverage  .env  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
app/: config.py  main.py
app/api/routes/: health.py  items.py
app/core/: database.py  metrics.py
app/models/: item.py
tests/: conftest.py
tests/unit/: test_services.py
